# monetary-control

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
finance/: admin.py
finance/api/: serializers.py  urls.py  views.py
finance/api/serializers/: __init__.py  create_transaction_serializer.py  transaction_serializer.py
finance/domain/: exceptions.py
finance/dto/: create_transaction_dto.py
finance/migrations/: 0001_initial.py  0002_auto_20260307_2229.py  0003_category_user_alter_category_type.py
finance/models/: __init__.py  account.py  category.py  recurring_transaction.py  tag.py  transaction.py
finance/queries/: financial_report_query.py
finance/repositories/: transaction_repository.py
finance/services/: transaction_service.py
finance/tests/: conftest.py  test_api_transactions.py  test_transaction_factory.py  test_usecase_create_transaction.py
finance/tests/factories/: account_factory.py  category_factory.py  transaction_factory.py  user_factory.py
finance/usecases/: create_transaction.py
monetary_control/: manage.py  settings.py  urls.py
monetary_control/monetary_control/: asgi.py  settings.py  urls.py  wsgi.py
